# Icarus

./: Cargo.toml  LICENSE  README.md
src/: dom.rs  main.rs
src/html/: parser.rs
